styles.css
body, main {
    height: 100dvh;
    width: 100dvw;
    padding: 0px;
    margin: 0px;
    background-color: rgb(0, 0, 0);
    font-family: Roboto, Arial, Helvetica, sans-serif;
    color: white;
}

body {
    display: grid;
    grid-template-columns: minmax(0, 1fr) minmax(0,3fr) minmax(0, 1fr);
    grid-template-rows: minmax(0, 3fr) minmax(0, 10fr) minmax(0, 2fr);
}


#gameboard {
    grid-area: 2 / 2 / 3 / 3;
    margin: 1px;
    outline: 1px solid  rgb(0, 0, 0);
    justify-self: center;
    align-self: center;
    height: 95%;
    aspect-ratio: 1 / 1;
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    grid-template-rows: repeat(3 , 1fr);
}

#winAlert {
    grid-area: 1 / 2 / 1 / 3;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    width: 100%;
    min-height: 100%;
    font-size: 4.5rem;
}

#winner, #winnerName {
    height: 50%;
}


#winner {
    display:flex;
    align-items: flex-end;
    font-style: italic;
    text-decoration: underline;
}

#winnerName {
    padding-left:4rem;
    font-weight: 450;
    flex-wrap: nowrap;
}

.cell {
    outline:1px solid rgb(255, 255, 255);
    border-radius: inherit;
    font-size: 100px;
    display: flex;
    justify-content: center;
    align-items: center;
}

button {
    width: 100px;
    height: 40px;
    justify-self: center;
    align-self: end;
    background-color: rgb(255, 255, 255);
    border-radius: 12px;
    margin-bottom: 40px;
}

#resetScore {
    margin-top: 20px;
}

#restartButton {
    grid-area: 3 / 2 / 4 / 3;
    width: 100px;
    height: 40px;
    justify-self: center;
    align-self: end;
    background-color: rgb(255, 255, 255);
    border-radius: 12px;
    margin-bottom: 40px;
}

input:focus {
    outline:none;
}

.playerNameDiv {
    grid-area: 2 / 1 / 3 / 1;
    padding-right: 10px;
    padding-left: 0px;
    padding-top: 5px;
    padding-bottom: 5px;
    border-radius: 4px;
    display: flex;
    flex-wrap: none;
}

.marker {
    padding-left: 1rem;
    font-size: 2rem;
}

#playerNames {
    grid-area: 2 / 1 / 3 / 2;
    padding-left: 45px;
    padding-top: 150px;
}


.playerNameBox {
    font-style: italic;
    color: white;
    width: 10rem;
    height: 2.25rem;
    font-size: 1rem;
    background-color: rgb(0, 0, 0);
    padding-right: 10px;
    padding-left: 10px;
    padding-top: 5px;
    padding-bottom: 5px;
    border-radius: 4px;
}

input {
  font-family: inherit;
}

#xMarker {
    color:blue;
}

.score {
    font-size: 1.75rem;
    white-space: nowrap;
    padding-left: 10px;
    padding-bottom: 10px;
    align-self: center;
    display: flex;
    flex-wrap: nowrap;

}

.scoreCount {
    padding-left: 10px;
}

